# Ampel-photometry

./: .buildinfo  .gitignore  .mergify.yml  README.md  api.html  genindex.html  index.html  mypy.ini  objects.inv  pyproject.toml  renovate.json  search.html  searchindex.js  setup.py  test_requirements.txt
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/: dependabot.yml
.github/workflows/: docs.yml  main.yml  package.yml
.jenkins/: Dockerfile.build  Jenkinsfile
_modules/: index.html
_modules/ampel/abstract/: AbsLightCurveT2Unit.html  AbsPhotoT3Unit.html  AbsTiedLightCurveT2Unit.html
_modules/ampel/alert/: PhotoAlert.html
_modules/ampel/ingest/compile/: PhotoT2Compiler.html
_modules/ampel/view/: LightCurve.html  TransientView.html
_sources/: api.rst.txt
_static/: documentation_options.js
ampel/abstract/: AbsLightCurveT2Unit.py  AbsPagedPhotoT3Unit.py  AbsPhotoT3Unit.py  AbsT2Tabulator.py  AbsTabulatedT2Unit.py  AbsTiedLightCurveT2Unit.py
ampel/alert/: PhotoAlert.py
ampel/aux/: PPSFilter.py  ULSFilter.py
ampel/compile/: DualPointT2Compiler.py  PhotoT1Compiler.py  PhotoT2Compiler.py  T1PhotoCombiner.py
ampel/content/: PhotoCompound.py  PhotoT1Document.py  PhotoT2Document.py  PhotoT2Record.py
ampel/demo/: DemoEvery3PhotoPointT2Unit.py  DemoEvery4PhotoPointT2Unit.py  DemoFirstPhotoPointT2Unit.py  DemoFirstUpperLimitT2Unit.py  DemoLightCurveCustomIngestT2Unit.py  DemoLightCurveT2Unit.py  DemoPhotoPointT2Unit.py  DemoTiedLightCurveT2Unit.py
ampel/demo/unit/base/: DemoEvery3PhotoPointT2Unit.py  DemoEvery4PhotoPointT2Unit.py  DemoFirstPhotoPointT2Unit.py  DemoFirstUpperLimitT2Unit.py  DemoLightCurveCustomIngestT2Unit.py  DemoLightCurveT2Unit.py  DemoPhotoPointT2Unit.py  DemoTiedLightCurveT2Unit.py
ampel/dev/: DevAmpelAlert.py
ampel/ingest/: DualPointT2Ingester.py  PhotoCompoundBluePrint.py  PhotoCompoundIngester.py  PhotoT2Ingester.py  T1PhotoCombiner.py
ampel/ingest/compile/: DualPointT2Compiler.py  PhotoT2Compiler.py
ampel/mongo/update/: DualPointT2Ingester.py  PhotoCompoundIngester.py  PhotoT2Ingester.py
ampel/t1/: T1PhotoRetroCombiner.py
ampel/test/unit/: DemoEvery3PhotoPointT2Unit.py  DemoEvery4PhotoPointT2Unit.py  DemoFirstPhotoPointT2Unit.py  DemoFirstUpperLimitT2Unit.py  DemoPhotoPointT2Unit.py
ampel/view/: LightCurve.py  TransientView.py
conf/ampel-photometry/: ampel.json  ampel.yaml
docs/sphinx/: conf.py  index.rst
tests/: test_PhotoT2Compiler.py  test_T1PhotoRetroCombiner.py  test_TransientView.py
