[tool.poetry]
name = "ampel-photometry"
version = "0.8.4"
description = "Photometry add-on for the Ampel system"
authors = ["Valery Brinnel"]
license = "BSD-3-Clause"
packages = [
    {include = "ampel"}
]
include = [
    'conf/*/*.json',
    'conf/*/*/*.json',
    'conf/*/*.yaml',
    'conf/*/*/*.yaml',
    'conf/*/*.yml',
    'conf/*/*/*.yml',
]


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ampel-interface = {version = "^0.8.8"}
ampel-core = {version = "^0.8.6"}
astropy = "^5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ampel.abstract.*"
disable_error_code = "empty-body"
